# vulkan-playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  make.bat  make.sh  make_dependencies.bat  make_dependencies.sh  vulkan-playground.sublime-project
cmake/: CompileShaders.cmake  ExtractReflection.cmake  FindVulkan.cmake  precompile_glsl.cmake
examples/: CMakeLists.txt
examples/HeaderGenerator/: main.cpp
examples/ModelViewer/: main.cpp
examples/SimpleWindow/: main.cpp
examples/TexturedQuad/: main.cpp
examples/VertexData/: main.cpp
examples/resources/: CMakeLists.txt
examples/resources/shaders/: CMakeLists.txt  VertexColors.frag  VertexColors.vert  color.frag  color.vert  texture.frag  texture.vert
src/: CMakeLists.txt  fwd.hpp
src/ReflectionExtractor/: CMakeLists.txt  main.cpp
src/Utils/: Queue.hpp  ScopedTimer.cpp  ThreadPool.hpp  stl_helpers.cpp  stl_helpers.hpp
src/VulkanPlayground/: CMakeLists.txt  fwd.hpp
src/VulkanPlayground/Graphics/: CombinedImageSampler.hpp  Device.cpp  Device.hpp  Framebuffer.cpp  Framebuffer.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  ShaderReflection.cpp  ShaderReflection.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp  TinyGLTF.cpp  TinyGLTF.hpp  UniformBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFactory.cpp  VulkanFactory.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.hpp  VulkanPtr.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  Window.cpp  Window.hpp
src/VulkanPlayground/Utils/: File.hpp  Logger.cpp  Logger.hpp  ScopedTimer.cpp  ScopedTimer.hpp  stl_helpers.hpp
